--- a/style.css
+++ b/style.css
@@ -80,6 +80,30 @@ h1{
 .hide{
     display: none;
 }
+
+@media screen and (max-width: 600px) {
+  #reset-btn{
+    height: 9vmin;
+    width: 22vmin;
+    background-color: black;
+    color: white;
+    font-size: 18px;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px -9px rgba(76,156,255,0);
+}
+#new-btn{
+    margin: 10px;
+    height: 9vmin;
+    width: 22vmin;
+    background-color: black;
+    color: white;
+    font-size: 18px;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px -9px rgba(76,156,255,0);
+}
+}
 /**
     * {
         margin: 0;
